--- a/views/game.ejs
+++ b/views/game.ejs
@@ -48,6 +48,10 @@
       <div class="well" id="button">
         <center><button id="next" class="btn btn-primary btn-large">Następne zadanie</button></center>
       </div>
+	  
+	  <div class="well" id="button">
+        <center><button id="next-allow" class="btn btn-warning btn-large">Zezwól na następny ruch</button></center>
+      </div>
 
       <footer>
         <p>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</p>
