--- a/views/game.ejs
+++ b/views/game.ejs
@@ -49,8 +49,8 @@
         <center><button id="next" class="btn btn-primary btn-large">Następne zadanie</button></center>
       </div>
 	  
-	  <div class="well" id="button">
-        <center><button id="next-allow" class="btn btn-warning btn-large">Zezwól na następny ruch</button></center>
+	  <div class="well" id="button2">
+       
       </div>
 
       <footer>
