--- a/views/game.ejs
+++ b/views/game.ejs
@@ -28,7 +28,8 @@
 	        <div class="span6">
 	        	<div class="well well-small">
 		          <div id="playerLeftName">
-	        			<h2>Oczekiwanie na gracza...</h2>
+	        			<div id="playerLeftAvatar"></div>
+						<h2>Oczekiwanie na gracza...</h2>
 	        		</div>
               <br>
 		          <div id="stepLeft"></div>
@@ -37,6 +38,7 @@
 	        <div class="span6">
 	        	<div class="well well-small">
 	        		<div id="playerRightName">
+					<div id="playerRightAvatar"></div>
 	        			<h2>Oczekiwanie na gracza...</h2>
 	        		</div>
               <br>
@@ -50,7 +52,7 @@
       </div>
 	  
 	  <div class="well" id="button2">
-       
+       <center><button id="next-allow" class="btn btn-success btn-large">Zezwól na następne zadanie drugiemu graczowi</button></center>
       </div>
 
       <footer>
