--- a/views/game.ejs
+++ b/views/game.ejs
@@ -5,6 +5,8 @@
     <title>ArtFight - simply do it!</title>
 
     <link href="/stylesheets/bootstrap.css" rel="stylesheet">
+	<link href="/stylesheets/style.css" rel="stylesheet">
+	
     <style type="text/css">
       body {
         padding-top: 60px;
