avatary dzialaja, css mocne zmiany

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -21,27 +21,32 @@
       <div class="navbar-inner">
       </div>
     </div>
+	
+	<div class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="navbar-inner">
+      </div>
+    </div>
 
     <div class="container">
-      <div class="hero-unit">
+      <div class="hero-unit art">
         <h1>ArtFight</h1>
       </div>
       <div class="row">
 	        <div class="span6">
-	        	<div class="well well-small">
-		          <div id="playerLeftName">
-	        			<div id="playerLeftAvatar"></div>
-						<h2>Oczekiwanie na gracza...</h2>
+	        	<div class="P1 well-small">
+		          <div id="playerLeftAvatar"></div>
+				  <div id="playerLeftName">
+	        			<h2>Oczekiwanie na gracza...</h2>
 	        		</div>
               <br>
 		          <div id="stepLeft"></div>
 	          </div>
 	       </div>
 	        <div class="span6">
-	        	<div class="well well-small">
-	        		<div id="playerRightName">
-					<div id="playerRightAvatar"></div>
-	        			<h2>Oczekiwanie na gracza...</h2>
+	        	<div class="P2 well-small">
+	        		<div id="playerRightAvatar"></div>
+					<div id="playerRightName">
+						    <h2>Oczekiwanie na gracza...</h2>
 	        		</div>
               <br>
 		          <div id="stepRight"></div>
@@ -49,16 +54,16 @@
 	       </div>
        </div>
 
-      <div class="well" id="button">
+      <div class="button" id="button">
         <center><button id="next" class="btn btn-primary btn-large">Następne zadanie</button></center>
       </div>
-	  
-	  <div class="well" id="button2">
+	  <br>
+	  <div class="button" id="button2">
        <center><button id="next-allow" class="btn btn-success btn-large">Zezwól na następne zadanie drugiemu graczowi</button></center>
       </div>
 
       <footer>
-        <p>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</p>
+        <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
       </footer>
 
     </div>
