--- a/views/home.ejs
+++ b/views/home.ejs
@@ -18,9 +18,15 @@
       <div class="navbar-inner">
       </div>
     </div>
+	
+	<div class="navbar navbar-inverse navbar-fixed-bottom">
+      <div class="navbar-inner">
+      </div>
+    </div>
+	
 
     <div class="container">
-      <div class="hero-unit">
+      <div class="hero-unit art">
         <h1>ArtFight</h1>
         <br>
         <form name="input" action="/" method="post">
@@ -35,7 +41,7 @@
         </form>  
       </div>
       <footer>
-        <p>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</p>
+        <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
       </footer>
 
     </div>
