--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,72 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+font:14px "Lucida Grande", Helvetica, Arial, sans-serif;
+background: #f8ffe8; /* Old browsers */
+background: -moz-linear-gradient(top,  #f8ffe8 0%, #e3f5ab 33%, #b7df2d 74%, #f8ffe8 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8ffe8), color-stop(33%,#e3f5ab), color-stop(74%,#b7df2d), color-stop(100%,#f8ffe8)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 74%,#f8ffe8 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 74%,#f8ffe8 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 74%,#f8ffe8 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f8ffe8 0%,#e3f5ab 33%,#b7df2d 74%,#f8ffe8 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f8ffe8', endColorstr='#f8ffe8',GradientType=0 ); /* IE6-9 */
+padding:50px;
 }
 
-.hero-unit {
-text-align:center
+.art{
+text-align:center;
+background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(255,255,255,0) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,0))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+
+}
+
+.P1 {
+text-align:center;
+min-height:20px;
+margin-bottom:20px;
+background: #f0f9ff; /* Old browsers */
+background: -moz-linear-gradient(top,  #f0f9ff 0%, #cbebff 47%, #a1dbff 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f0f9ff), color-stop(47%,#cbebff), color-stop(100%,#a1dbff)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #f0f9ff 0%,#cbebff 47%,#a1dbff 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0f9ff', endColorstr='#a1dbff',GradientType=0 ); /* IE6-9 */
+border:1px solid #e3e3e3;
+-webkit-border-radius:4px;
+-moz-border-radius:4px;
+border-radius:4px;
+-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+padding:19px;
+}
+
+.P2 {
+text-align:center;
+min-height:20px;
+margin-bottom:20px;
+background: #fff2f3; /* Old browsers */
+background: -moz-linear-gradient(top,  #fff2f3 0%, #ffccda 47%, #ffa3bd 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fff2f3), color-stop(47%,#ffccda), color-stop(100%,#ffa3bd)); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  #fff2f3 0%,#ffccda 47%,#ffa3bd 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  #fff2f3 0%,#ffccda 47%,#ffa3bd 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  #fff2f3 0%,#ffccda 47%,#ffa3bd 100%); /* IE10+ */
+background: linear-gradient(to bottom,  #fff2f3 0%,#ffccda 47%,#ffa3bd 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff2f3', endColorstr='#ffa3bd',GradientType=0 ); /* IE6-9 */
+border:1px solid #e3e3e3;
+-webkit-border-radius:4px;
+-moz-border-radius:4px;
+border-radius:4px;
+-webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+-moz-box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+box-shadow:inset 0 1px 1px rgba(0,0,0,0.05);
+padding:19px;
 }
 
 a {
-  color: #00B7FF;
+color:#00B7FF;
 }
