avatary dalsze poprawy

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>ArtFight - simply do it!</title>
 
 	<link href="/stylesheets/bootstrap.css" rel="stylesheet">
