--- a/views/game.ejs
+++ b/views/game.ejs
@@ -40,6 +40,7 @@
 	        		</div>
               <br>
 		          <div id="stepLeft"></div>
+				  <div id="oczekLeft"></div>
 	          </div>
 	       </div>
 	        <div class="span6">
@@ -50,6 +51,7 @@
 	        		</div>
               <br>
 		          <div id="stepRight"></div>
+				  <div id="oczekRight"></div>
 	          </div>
 	       </div>
        </div>
