dodanie bazy pod chat

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -63,6 +63,18 @@
 	  <div class="button" id="button2">
        <center><button id="next-allow" class="btn btn-success btn-large">Zezwól na następne zadanie drugiemu graczowi</button></center>
       </div>
+	  <br>
+	  
+	 <div class="hero-unit chat">
+		<div class="wpis">
+			<input id="data" style="width:200px;" />
+			<input type="button" id="datasend" value="send" />
+		</div>
+	  
+		<div class="tresc">
+			tresc czatu
+		</div>
+	  </div>
 
       <footer>
         <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
