dodana funkcja zabraniania kontynuacji

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -61,7 +61,7 @@
       </div>
 	  <br>
 	  <div class="button" id="button2">
-       <center><button id="next-allow" class="btn btn-success btn-large">Zezwól na następne zadanie drugiemu graczowi</button></center>
+       <center><button id="next-allow" class="btn btn-success btn-large">Zezwól</button> <button id="next-disallow" class="btn btn-danger btn-large">Zabroń</button></center>
       </div>
 	  <br>
 	  
