kolejne poprawy do bledu tej samej ksywki

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -71,7 +71,7 @@
 			<input type="button" id="datasend" value="send" />
 		</div>
 	  
-		<div class="tresc">
+		<div class="tresc" id="tresc">
 			tresc czatu
 		</div>
 	  </div>
