--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,11 +17,13 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
+	  	  <p><center>ArtFight! - simply do it!</center></p>
       </div>
     </div>
 	
 	<div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="navbar-inner">
+	  <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
       </div>
     </div>
 	
