--- a/views/game.ejs
+++ b/views/game.ejs
@@ -19,18 +19,17 @@
   <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
+	  	  <p><center>ArtFight! - simply do it!</center></p>
       </div>
     </div>
 	
 	<div class="navbar navbar-inverse navbar-fixed-bottom">
       <div class="navbar-inner">
+	  <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
       </div>
     </div>
 
     <div class="container">
-      <div class="hero-unit art">
-        <h1>ArtFight</h1>
-      </div>
       <div class="row">
 	        <div class="span6">
 	        	<div class="P1 well-small">
@@ -75,10 +74,6 @@
 			tresc czatu
 		</div>
 	  </div>
-
-      <footer>
-        <p><center>Paweł Tomaszewski s8147 - Projekt TIN ITN 2013</center></p>
-      </footer>
 
     </div>
     <script src="/javascripts/jquery.min.js"></script>
