poprawki graficzne do chatu

--- a/views/game.ejs
+++ b/views/game.ejs
@@ -66,8 +66,8 @@
 	  
 	 <div class="hero-unit chat">
 		<div class="wpis">
-			<input id="data" style="width:200px;" />
-			<input type="button" id="datasend" value="send" />
+			<input id="data" style="width:400px" />
+			<input type="button" id="datasend" value="Wyślij" />
 		</div>
 	  
 		<div class="tresc" id="tresc">
